Fix Java 8 compatibility and address remaining review items
Java 8 compatibility fixes (policy model is public API):
- Replace orElseThrow() with orElseThrow(NoSuchElementException::new)
- Replace Collectors.toUnmodifiableList() with collectingAndThen
- Replace List.toArray(IntFunction) with List.toArray(new T[0])
- Replace Optional.isEmpty() with !Optional.isPresent()

Other fixes:
- Remove accidentally committed .claude review file
- Support 201 Created response for PUT /references on first creation
  (previously always returned 204; now returns 201 with body when
  setting references on an entry that had none)
- Updated OpenAPI spec to document 201 response

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>